ST-07 Fix scrollbar z-index to prevent header overlapping

--- a/src/components/scrollbar-slider.css
+++ b/src/components/scrollbar-slider.css
@@ -17,6 +17,7 @@
         right: auto;
         top: auto;
         width: 100%;
+        z-index: 9;
 
         .swiper-scrollbar-drag {
             background: #555;
